--- a/customize.dist/src/less2/include/creation.less
+++ b/customize.dist/src/less2/include/creation.less
@@ -51,18 +51,45 @@
         overflow: auto;
         .cp-creation-fill {
             flex: 1 1 50%;
+            display: flex;
+            align-items: flex-end;
         }
-        .cp-creation-logo {
-            height: 300px;
-            width: 200px;
-            min-height: 0;
-            text-align: center;
-            img {
-                margin-top: 50px;
-                margin-bottom: 50px;
-                max-width: 100%;
-                max-height: ~"calc(100% - 100px)";
+        #cp-creation-status {
+            display: flex;
+            color: @cp_loading-color;
+            align-items: center;
+            font-family: "IBM Plex Mono";
+            font-size: 15px;
+            margin-top: 2rem;
+            gap: 0.5rem;
+            svg {
+                margin: 0;
             }
+        }
+        #cp-creation-logo {
+            flex: 0 1 auto;
+            min-height: 0;
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            color: @cp_loading-logo;
+            font-size: 40px;
+
+            img {
+                margin: 0;
+                max-height: 60px;
+            }
+            span {
+                font-size: 40px;
+                font-family: "IBM Plex Mono";
+                .tools_unselectable();
+            }
+        }
+        #cp-creation-footer {
+            margin-bottom: 2rem;
+            display: flex;
+            flex-flow: column;
+            align-items: center;
         }
     }
     #cp-creation {
@@ -120,11 +147,13 @@
             }
             .cp-creation-title-text {
                 position: relative;
+                display: flex;
+                align-items: center;
                 a {
                     position: absolute;
-                    margin-left: 1em;
                     font-size: 16px;
                     color: inherit;
+                    right: -30px;
                 }
                 a:focus-visible {
                     border-radius: 50%;
