--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -124,7 +124,7 @@
                 width: 2px !important;
                 background: @pos-color;
                 &:before {
-                    left: -6px;
+                    right: -6px;
                 }
             }
         }
@@ -133,6 +133,7 @@
                 height: 20px !important;
                 .cp-history-timeline-pos {
                     height: 20px !important;
+                    margin-left: 100%;
                 }
             }
             .cp-history-timeline-actions {
@@ -261,7 +262,7 @@
                 top: -17px;
                 font-size: 24px;
                 position: absolute;
-                left: ~"calc(50% - 6px)";
+                right: ~"calc(50% - 6px)";
             }
         }
         @media screen and (max-width: 870px) {
