.css conflicts resolution

--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -145,6 +145,7 @@
                 height: 20px !important;
                 .cp-history-timeline-pos {
                     height: 20px !important;
+                    margin-left: 100%;
                 }
             }
             .cp-history-timeline-actions {
