Fix missing paddings & missing icon

--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -187,6 +187,12 @@
         flex: 0;
         margin-top: 10px;
     }
+    .cp-app-profile-friend-request.btn-success {
+        margin-right: 0.5rem;
+    }
+    .cp-app-profile-friend-request b {
+        margin-right: 0.3rem;
+    }
 
     // I tried using flexbox but messed with how the pencil icon was displayed
     #cp-app-profile-invite-button {
