add button margin #2072

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -954,10 +954,10 @@
                             flex: 1;
                             min-width: 100px;
                             border-color: @cryptpad_text_col;
-                            border-right: 0px;
                         }
                         button {
                             svg { margin: 0 !important; }
+                            margin-left: 0.5rem;
                         }
 
                     }
