add button margin #2075

--- a/customize.dist/src/less2/include/support.less
+++ b/customize.dist/src/less2/include/support.less
@@ -95,6 +95,8 @@
                 }
                 .cp-support-title-buttons {
                     margin-left: 1em;
+                    display: inline-flex;
+                    gap: 0.5rem;
                     svg {
                         margin: 0;
                     }
