--- a/customize.dist/src/less2/include/support.less
+++ b/customize.dist/src/less2/include/support.less
@@ -105,6 +105,7 @@
             .cp-support-ticket-tags {
                 .cp-tokenfield-form button.cp-token-close {
                     border-radius: @variables_radius !important;
+                    margin-left: 0.5rem;
                 }
             }
             &.cp-filtered {
