--- a/customize.dist/src/less2/include/support.less
+++ b/customize.dist/src/less2/include/support.less
@@ -96,7 +96,7 @@
                 .cp-support-title-buttons {
                     margin-left: 1em;
                     display: inline-flex;
-                    gap: 0.5rem;
+                    gap: @variables_icon_margin;
                     svg {
                         margin: 0;
                     }
