space out filter tags

--- a/customize.dist/src/less2/include/support.less
+++ b/customize.dist/src/less2/include/support.less
@@ -91,6 +91,9 @@
                         }
                         margin-top: @sidebar_base-margin;
                         width: 100%;
+                        span {
+                            margin-bottom: 0.3rem;
+                        }
                     }
                 }
                 .cp-support-title-buttons {
