--- a/customize.dist/src/less2/include/tokenfield.less
+++ b/customize.dist/src/less2/include/tokenfield.less
@@ -174,9 +174,6 @@
                 margin-right: @tokens_margin;
             }
             .tools_unselectable();
-            i {
-                margin-right: 5px;
-            }
         }
         .cp-tags-list {
             em {
@@ -186,6 +183,7 @@
             span {
                 cursor: pointer;
                 font-size: 14px;
+                margin-bottom: 0.3rem;
                 .tools_unselectable();
                 &.active {
                     background-color: @cp_kanban-fg;
