add focus outline

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -121,6 +121,11 @@
                         display: flex;
                         flex-flow: column;
                         align-items: baseline;
+                        input, textarea {
+                            &:focus-visible {
+                                outline: @variables_focus_style;
+                            }
+                        }
                     }
                     .cp-usergrid-container {
                         margin-bottom: 0px !important;
@@ -219,6 +224,9 @@
                             border-right: 0px;
                             border-top-right-radius: 0px;
                             border-bottom-right-radius: 0px;
+                            &:focus-visible {
+                                outline: @variables_focus_style;
+                            }
                         }
                         input:invalid {
                             border-color: red;
