--- a/customize.dist/src/less2/include/tokenfield.less
+++ b/customize.dist/src/less2/include/tokenfield.less
@@ -43,6 +43,9 @@
             input {
                 flex: 1;
                 min-width: 0 !important;
+                &:focus-visible {
+                    outline: @variables_focus_style;
+                }
             }
             button {
                 // no radius in input + button combo
