--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -654,6 +654,9 @@
                             font-style: italic;
                             margin-left: 10px;
                         }
+                        .alert-info {
+                            margin-top: 0.5rem;
+                        }
                     }
                 }
 
