fix icon size #2095

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -873,8 +873,8 @@
                 //     width: 100%;
                 // }
             }
-            @media screen and (max-height: @browser_media-medium-screen),
-            screen and (max-width: @browser_media-medium-screen) {
+            @media screen and (max-width: @browser_media-medium-screen),
+            screen and (max-height: 500px) {
                 a.cp-toolbar-link-logo {
                     svg {
                         width: @variables_icon_width;
