cleaning and refactoring

--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -124,7 +124,7 @@
                 width: 2px !important;
                 background: @pos-color;
                 &:before {
-                    right: -6px;
+                    left: -6px;
                 }
             }
         }
@@ -262,7 +262,7 @@
                 top: -17px;
                 font-size: 24px;
                 position: absolute;
-                right: ~"calc(50% - 6px)";
+                left: ~"calc(50% - 6px)";
             }
         }
         @media screen and (max-width: 870px) {
