fix focus outline for rename input

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -373,7 +373,7 @@
                         overflow: hidden;
                         text-overflow: ellipsis;
                     }
-                    &:focus-visible {
+                    &:focus-visible, input:focus-visible {
                         outline: @variables_focus_style;
                     }
                 }
