--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -419,14 +419,14 @@
             padding: 0;
             margin: 0;
             z-index: 10;
-            cursor: default;
+            cursor: pointer;
             display: inline-flex;
             svg {
                 margin: 0;
             }
             &:focus-visible {
                 outline: @variables_focus_style;
-                border-radius: @variables_radius_S;
+                border-radius: @variables_radius;
             }
         }
         .cp-app-drive-tree-docs {
