--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -101,7 +101,6 @@
                 margin: 8px 0;
             }
             svg {
-                margin: auto;
                 margin: 18px 0;
                 text-align: center;
                 &.listonly {
@@ -1062,7 +1061,10 @@
 
         .cp-app-drive-new-name {
             color: @cp_drive-fg;
+            overflow: hidden;
+            text-overflow: ellipsis;
             white-space: nowrap;
+            max-width: 100%;
         }
 
         @media screen and (max-width: @browser_media-medium-screen),
