--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -185,6 +185,7 @@
     }
     .cp-app-profile-friend-request {
         flex: 0;
+        white-space: normal;
         margin-top: 10px;
     }
     .cp-app-profile-friend-request.btn-success {
