Fix resizing of icon inside button

--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -187,6 +187,9 @@
         flex: 0;
         white-space: normal;
         margin-top: 10px;
+        svg {
+            min-width: @variables_icon_width;
+        }
     }
     .cp-app-profile-friend-request.btn-success {
         margin-right: 0.5rem;
