timeline UI - wip

--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -179,6 +179,16 @@
                 position: relative;
                 background-color: @history_lineBg;
                 height: 39px;
+                .cp-oohistory-bar-el {
+                    background-color: @history_userBg2;
+                    display: block;
+                    // width: 100%;
+                    height: 100%
+                        // background-color: @history_userBg2;
+                        // &:nth-child(2n) {
+                        //     background-color: @history_userBg1;
+                        // }
+                    }
             }
             .cp-history-timeline-bar {
                 display: flex;
