--- a/customize.dist/src/less2/include/leftside-menu.less
+++ b/customize.dist/src/less2/include/leftside-menu.less
@@ -14,6 +14,7 @@
     margin: 10px 0;
     cursor: pointer;
     height: @variables_bar-height;
+    background-color: @cp_sidebar-left-item-bg;
     border-radius: @variables_radius_L;
     &:hover {
         background: @cryptpad_text_col_inv;
