--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -186,7 +186,7 @@
     .cp-app-profile-friend-request {
         flex: 0;
         white-space: normal;
-        margin-top: 10px;
+        height: auto !important;
         svg {
             min-width: @variables_icon_width;
         }
