Allow custom broadcast with filtered users

--- a/customize.dist/src/less2/include/modals-ui-elements.less
+++ b/customize.dist/src/less2/include/modals-ui-elements.less
@@ -365,6 +365,13 @@
         }
     }
 
+    .alertify .dialog .msg div.cp-admin-message {
+        color: @cryptpad_text_col;
+        a {
+            color: @cryptpad_color_link;
+        }
+    }
+
     .cp-userteam-picker {
         .cp-userteam-filter {
             margin: 5px 0;
