--- a/customize.dist/src/less2/include/notifications.less
+++ b/customize.dist/src/less2/include/notifications.less
@@ -68,6 +68,9 @@
                 &.cp-clickable {
                     cursor: pointer;
                 }
+                a {
+                    color: @cryptpad_color_link;
+                }
             }
             .cp-notification-dismiss {
                 color: @cp_dropdown-fg;
