--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -749,12 +749,21 @@
                             padding: 5px;
                             margin-top: -10px;
                             margin-right: -10px;
+                            display: inline-flex;
+                            align-items: center;
+                            gap: 5px;
                             &.cp-is-empty {
                                 height: fit-content;
                                 padding: 3px;
                                 border-radius: 0 @variables_radius 0 0;
                                 background-color: @cp_alerts-danger-bg;
                                 color: @cp_alerts-danger-text;
+                            }
+                            .cp-form-poll-required-info {
+                                opacity: 0.7;
+                                &:hover {
+                                    opacity: 1;
+                                }
                             }
                         }
                     }
