Add custom Support message

--- a/www/support/app-support.less
+++ b/www/support/app-support.less
@@ -44,7 +44,7 @@
         color: @cryptpad_color_link;
         text-decoration: underline;
     }
-    .alert-info {
+    .alert-info, .alert-warning {
         font-size: 16px;
         margin-top: 15px;
         margin-bottom: 15px;
