--- a/customize.dist/src/less2/include/leftside-menu.less
+++ b/customize.dist/src/less2/include/leftside-menu.less
@@ -10,7 +10,7 @@
 
 .leftside-menu-category_main() {
     .unselectable_make();
-    padding: 5px;
+    padding: 5px 5px 5px 10px;
     margin: 10px 0;
     cursor: pointer;
     height: @variables_bar-height;
