update border-radius for drive tree

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -362,6 +362,7 @@
                     overflow: hidden;
                     text-overflow: ellipsis;
                     .leftside-menu-category_main();
+                    border-radius: @variables_radius_M;
                     display: flex;
                     align-items: center;
                     cursor: pointer;
