--- a/customize.dist/src/less2/include/variables.less
+++ b/customize.dist/src/less2/include/variables.less
@@ -21,6 +21,7 @@
 // Rounded corners
 @variables_radius_S: 3px;
 @variables_radius: 5px;
+@variables_radius_M: 7.5px;
 @variables_radius_L: 10px;
 
 @variables_focus_style: @cryptpad_color_brand solid 2px;
