add spacing between elements

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -347,7 +347,8 @@
             border-radius: @variables_radius_L;
             cursor: auto;
             &li, li {
-                padding: 0;
+                padding: 0px;
+                margin-top: 2px;
                 &.cp-app-drive-element-collapsed ul {
                     display: none;
                 }
