--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -520,6 +520,7 @@
             -webkit-user-select: none;
             -moz-user-select: none;
             -ms-user-select: none;
+            border-left: 1px solid transparent;
             &:hover {
                 border-left: 1px solid @cryptpad_text_col;
             }
