timeline UI update

--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -271,6 +271,13 @@
             }
         }
 
+        .cp-history-timeline-pos-oo {
+            position: absolute;
+            left: 50%;
+            bottom: 70%;
+            transform: translateX(-50%)
+        }
+
         .cp-history-oo-timeline-pos {
             width: 2px;
             border: 2px solid @cryptpad_text_col;
