--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -183,7 +183,7 @@
                     background-color: @history_userBg2;
                     display: block;
                     // width: 100%;
-                    height: 100%
+                    height: 100%;
                         // background-color: @history_userBg2;
                         // &:nth-child(2n) {
                         //     background-color: @history_userBg1;
