--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -129,9 +129,10 @@
         }
         &.cp-smallpatch {
             .cp-history-snapshot {
-                border: none !important;
-                width: 2px !important;
-                background: @pos-color;
+                border: 2px solid !important;
+                // border: none !important;
+                // width: 2px !important;
+                // background: @pos-color;
             }
             .cp-history-timeline-pos {
                 border-right: none;
@@ -190,10 +191,13 @@
                         // }
                     }
             }
+            .cp-history-patch:nth-child(odd) {
+                        background-color: @history_userBg1
+                    }
             .cp-history-timeline-bar {
                 display: flex;
                 flex-flow: column;
-                padding: 1px;
+                // padding: 1px;
                 & > span {
                     height: 18px;
                     display: flex;
@@ -215,8 +219,13 @@
                         }
                     }
                 }
+                    //                 .cp-history-patch-color {
+                    //                             background-color: red !important
+
+                    //     // background-color: @history_lineBg
+                    // }
                 .cp-history-snapshots {
-                    position: absolute;
+                    // position: absolute;
                     left: 1px;
                     right: 1px;
                     top: 1px;
@@ -230,6 +239,11 @@
                         align-items: center;
                         justify-content: center;
                     }
+                    // .cp-history-patch-color {
+                    //                             background-color: red !important
+
+                    //     // background-color: @history_lineBg
+                    // }
                 }
             }
         }
