--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -56,6 +56,12 @@
                 font-size: 12px;
                 margin-right: 10px;
             }
+
+            .cp-toolbar-history-previous, .cp-toolbar-history-next {
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+            }
         }
         .cp-toolbar-history-actions {
             display: flex;
@@ -225,7 +231,7 @@
                     //     // background-color: @history_lineBg
                     // }
                 .cp-history-snapshots {
-                    // position: absolute;
+                    position: absolute;
                     left: 1px;
                     right: 1px;
                     top: 1px;
