--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -136,9 +136,6 @@
         &.cp-smallpatch {
             .cp-history-snapshot {
                 border: 2px solid !important;
-                // border: none !important;
-                // width: 2px !important;
-                // background: @pos-color;
             }
             .cp-history-timeline-pos {
                 border-right: none;
@@ -184,26 +181,20 @@
             .cp-history-timeline-container {
                 flex: 1;
                 position: relative;
-                background-color: @history_userBg2;
+                background-color: @history_lineBg;
                 height: 39px;
-                .cp-oohistory-bar-el {
-                    background-color: @history_userBg2;
-                    display: block;
-                    // width: 100%;
-                    height: 100%;
-                        // background-color: @history_userBg2;
-                        // &:nth-child(2n) {
-                        //     background-color: @history_userBg1;
-                        // }
-                    }
+            }
+            .cp-oohistory-bar-el {
+                background-color: @history_userBg2;
+                display: block;
+                height: 100%;
             }
             .cp-history-patch:nth-child(odd) {
-                        background-color: @history_userBg1
-                    }
+                background-color: @history_userBg1
+            }
             .cp-history-timeline-bar {
                 display: flex;
                 flex-flow: column;
-                // padding: 1px;
                 & > span {
                     height: 18px;
                     display: flex;
@@ -292,21 +283,18 @@
             width: 2px;
             border: 2px solid @cryptpad_text_col;
             height: 37px;
-            //background: @pos-color;
-            // position: absolute;
             &:before {
                 top: -17px;
                 font-size: 24px;
                 position: absolute;
-                // left: ~"calc(50% - 6px)";
             }
         }
 
         .cp-history-timeline-pos {
-            width: 2px;
+            // width: 2px;
             border: 2px solid @cryptpad_text_col;
             height: 37px;
-            //background: @pos-color;
+            // background: @pos-color;
             position: absolute;
             svg {
                 top: -14px;
