--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -282,22 +282,14 @@
             }
         }
 
-        .cp-history-timeline-pos-oo {
-            position: absolute;
-            left: 50%;
-            bottom: 70%;
-            transform: translateX(-50%)
-        }
-
         .cp-history-oo-timeline-pos {
-            width: 2px;
             border: 2px solid @cryptpad_text_col;
             height: 37px;
-            // left: 2px;
-            &:before {
-                top: -17px;
-                font-size: 24px;
+            svg {
                 position: absolute;
+                left: 50%;
+                bottom: 70%;
+                transform: translateX(-50%)
             }
         }
 
