--- a/customize.dist/src/less2/include/support.less
+++ b/customize.dist/src/less2/include/support.less
@@ -66,6 +66,9 @@
         .cp-support-recorded-insert {
             margin-right: @sidebar_base-margin;
         }
+        button {
+            margin-right: @variables_icon_margin;
+        }
     }
     @ticket-padding: 10px;
     .cp-support-container {
