--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -758,6 +758,9 @@
                                 border-radius: 0 @variables_radius 0 0;
                                 background-color: @cp_alerts-danger-bg;
                                 color: @cp_alerts-danger-text;
+                                svg.lucide {
+                                    margin: 0;
+                                }
                             }
                             .cp-form-poll-required-info {
                                 opacity: 0.7;
