--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -186,6 +186,7 @@
     .cp-app-profile-friend-request {
         flex: 0;
         white-space: normal;
+        margin-bottom: 0.5rem;
         svg {
             min-width: @variables_icon_width;
         }
