--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -56,6 +56,12 @@
                 font-size: 12px;
                 margin-right: 10px;
             }
+
+            .cp-toolbar-history-previous, .cp-toolbar-history-next {
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+            }
         }
         .cp-toolbar-history-actions {
             display: flex;
@@ -129,9 +135,7 @@
         }
         &.cp-smallpatch {
             .cp-history-snapshot {
-                border: none !important;
-                width: 2px !important;
-                background: @pos-color;
+                border: 2px solid !important;
             }
             .cp-history-timeline-pos {
                 border-right: none;
@@ -145,6 +149,7 @@
                 height: 20px !important;
                 .cp-history-timeline-pos {
                     height: 20px !important;
+                    margin-left: 100%;
                 }
             }
             .cp-history-timeline-actions {
@@ -179,10 +184,25 @@
                 background-color: @history_lineBg;
                 height: 39px;
             }
+            .cp-oohistory-bar-el {
+                background-color: @history_userBg2;
+                display: block;
+                height: 100%;
+            }
+            .cp-history-patch {
+                height: 100%;
+                position: relative;
+                display: flex;
+                justify-content: center;
+                box-sizing: border-box;
+                &:nth-child(odd) {
+                    background-color: @history_userBg1
+                }
+            }
+
             .cp-history-timeline-bar {
                 display: flex;
                 flex-flow: column;
-                padding: 1px;
                 & > span {
                     height: 18px;
                     display: flex;
@@ -207,17 +227,27 @@
                 .cp-history-snapshots {
                     position: absolute;
                     left: 1px;
-                    right: 1px;
-                    top: 1px;
+                    right: 0px;
+                    top: 0px;
                     bottom: 1px;
                     cursor: pointer;
                     .cp-history-snapshot {
                         position: absolute;
                         border: 2px solid @cryptpad_text_col;
-                        height: 100%;
+                        height: 98%;
                         display: flex;
-                        align-items: center;
+                        align-items: center !important;
                         justify-content: center;
+                    }
+                }
+
+                .cp-history-snapshots-oo {
+                    top: 0px;
+                    bottom: 0px;
+                    margin-left: -1px;
+                    width: 100%;
+                    .cp-history-snapshot {
+                        height: 100%;
                     }
                 }
             }
@@ -257,6 +287,17 @@
                 button:first-child {
                     margin-left: 0;
                 }
+            }
+        }
+
+        .cp-history-oo-timeline-pos {
+            border: 2px solid @cryptpad_text_col;
+            height: 37px;
+            svg {
+                position: absolute;
+                left: 50%;
+                bottom: 70%;
+                transform: translateX(-50%)
             }
         }
 
